--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-gdown>5.1.0
+paddlepaddle>=2.3.1 
+paddleocr==2.6.1.3 
+vietocr>=0.3.8
+pillow==9.5.0
+torchvision==0.18.0
+streamlit==1.35.0
+transformers==4.41.2
+streamlit-image-select==0.6.0
